Refactoring to allow fixed backgrounds on ios

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -5,12 +5,6 @@
 /* #desktop-menu * {border: 0.5px solid #ff0000 ;}
 #desktop-menu {border: 0.5px solid #ff0000 ;} */
 
-@media screen and (max-width: 768px) {
-    body {
-        background-attachment: scroll; /* Fallback for iOS */
-    }
-}
-
 
 @font-face {
     font-family: outfitExtraLight;
@@ -48,6 +42,8 @@
 }
 
 :root {
+    --vh: 100%;
+    
     --primary:theme("colors.primary");
     --secondary:theme("colors.secondary");
     --accent:theme("colors.accent");
@@ -68,6 +64,15 @@
     position: relative;
 }
 
+
+@media (max-width: 768px) {
+    body {
+        height: 100vh; /* Force body height to viewport height */
+    }
+    #backgroundBlue, #backgroundRed {
+        height: calc(var(--vh, 1vh) * 100); /* Ensure fixed elements take the full viewport height */
+    }
+}
 
 
 .fadeIn {
